Se creó con Colab

--- a/P3E5.ipynb
+++ b/P3E5.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNwTHEMvtftCZrVVwM+OFgi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,6 +82,8 @@
         "estimar_U01(lambda x: (x+2)/((x+2)**2-1))\n",
         "estimar_U01(lambda x: (1/x-1)*(1+(1/x-1)**2)**(-2)*(1/x**2))\n",
         "integral_infinita(lambda x: math.exp(-(x)**2))\n",
+        "exp = lambda x: math.exp(-(x/(1-x)))\n",
+        "estimar_U01(lambda x: -exp(x)*(exp(x)-1)*(1/(1-x)**2))\n",
         "#...\n",
         "\n",
         "None"
@@ -92,25 +93,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_9lGcx2Ifg0G",
-        "outputId": "cbdd680e-bfe5-4192-fc9e-9a9df9fab18a"
+        "outputId": "e3e44b1c-d491-4dd9-dd36-cdde6dd2667c"
       },
-      "execution_count": 25,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Estimación con estimar_U01:\n",
-            "lambda x: (1-x**2)**(3/2)) = 0.5876231194432597\n",
+            "lambda x: (1-x**2)**(3/2)) = 0.5881871348859696\n",
             "\n",
             "Estimación con estimar_U01:\n",
-            "lambda x: (x+2)/((x+2)**2-1)) = 0.4902122443359228\n",
+            "lambda x: (x+2)/((x+2)**2-1)) = 0.49013829494474165\n",
             "\n",
             "Estimación con estimar_U01:\n",
-            "lambda x: (1/x-1)*(1+(1/x-1)**2)**(-2)*(1/x**2)) = 0.4995987439023218\n",
+            "lambda x: (1/x-1)*(1+(1/x-1)**2)**(-2)*(1/x**2)) = 0.49978366677501357\n",
             "\n",
             "Estimación con integral_infinita:\n",
-            "lambda x: math.exp(-(x)**2)) = 1.7779766262596262\n",
+            "lambda x: math.exp(-(x)**2)) = 1.7636798800935176\n",
+            "\n",
+            "Estimación con estimar_U01:\n",
+            "lambda x: -exp(x)*(exp(x)-1)*(1/(1-x)**2)) = 0.49980363184482546\n",
             "\n"
           ]
         }
