Se creó con Colab

--- a/P4E1.ipynb
+++ b/P4E1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJ5SR6Glw2lKt88kkKmf52",
+      "authorship_tag": "ABX9TyNOJHZVI0Nr1otmQaoTgc4f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,15 +49,18 @@
       "source": [
         "import random\n",
         "def fisher_yates(arr):\n",
-        "    newArr = arr[:] # copia\n",
-        "    size = len(newArr)\n",
+        "  \"\"\"\n",
+        "  Recorre el arreglo de atrás hacia adelante, y para cada posición i, elige un índice aleatorio j ∈ [0, i] y hace un swap.\n",
+        "  \"\"\"\n",
+        "  newArr = arr[:] # copia\n",
+        "  size = len(newArr)\n",
         "\n",
-        "    for i in range(size - 1, 0, -1):\n",
-        "        u = random.random()\n",
-        "        j = int(u * (i + 1))\n",
-        "        newArr[i], newArr[j] = newArr[j], newArr[i]\n",
+        "  for i in range(size - 1, 0, -1):\n",
+        "      u = random.random()\n",
+        "      j = int(u * (i + 1))\n",
+        "      newArr[i], newArr[j] = newArr[j], newArr[i]\n",
         "\n",
-        "    return newArr\n",
+        "  return newArr\n",
         "\n",
         "def nuevo_mazo_barajado():\n",
         "  mazo = [i+1 for i in range(100)]\n",
