Se creó con Colab

--- a/P4E6.ipynb
+++ b/P4E6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsNdWkRKXiloZIg5sFPHpx",
+      "authorship_tag": "ABX9TyOdATkHUqaegQ3h2BKMdmXp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,57 +48,59 @@
         "def medir_tiempo(func):\n",
         "    inicio = time.perf_counter()\n",
         "    resultado = func()\n",
-        "    fin = time.perf_counter()\n",
-        "    return resultado, fin - inicio\n",
+        "    duracion = time.perf_counter() - inicio\n",
+        "    return resultado, duracion\n",
         "\n",
-        "def calcular_TVD(dict_fpm_estimada, dict_fpm_real): # Distancia Total de Variación (TVD) entre dos distribuciones discretas.\n",
-        "  return 0.5 * sum(abs(dict_fpm_real[x] - dict_fpm_estimada.get(x, 0)) for x in dict_fpm_real)\n",
+        "def calcular_TVD(dict_p1, dict_p2):\n",
+        "    \"\"\"Distancia Total de Variación (TVD) entre dos distribuciones.\"\"\"\n",
+        "    soporte_total = set(dict_p1) | set(dict_p2)\n",
+        "    return 0.5 * sum(abs(dict_p1.get(k, 0) - dict_p2.get(k, 0)) for k in soporte_total)\n",
         "\n",
-        "def calcular_momentos(fpm):\n",
-        "    esperanza = sum(x * p for x, p in fpm.items())\n",
-        "    varianza = sum((x - esperanza)**2 * p for x, p in fpm.items())\n",
-        "    desviacion = varianza**0.5\n",
-        "    return esperanza, varianza, desviacion\n",
+        "def calcular_momentos(dict_fpm):\n",
+        "    \"\"\"Calcula esperanza, varianza y desviación estándar de una distribución discreta.\"\"\"\n",
+        "    esperanza = sum(x * p for x, p in dict_fpm.items())\n",
+        "    varianza = sum((x - esperanza)**2 * p for x, p in dict_fpm.items())\n",
+        "    return esperanza, varianza, varianza**0.5\n",
         "\n",
-        "def comparar_distribuciones_df(dict_fpm_estimada, dict_fpm_correcta):\n",
-        "    data_df = pd.DataFrame({\n",
-        "        \"Datos\": [f\"P({k})\" for k in dict_fpm_estimada.keys()],\n",
-        "        \"Real\": [dict_fpm_correcta[x] for x in dict_fpm_estimada.keys()],\n",
-        "        \"Estimación\": list(dict_fpm_estimada.values()),\n",
-        "        \"Diferencia\": [abs(dict_fpm_correcta[x] - dict_fpm_estimada[x]) for x in dict_fpm_estimada.keys()]\n",
-        "    })\n",
+        "def comparar_distribuciones_df(p_estimada, p_real):\n",
+        "    soporte = list(p_real.keys())\n",
+        "    data = [{\n",
+        "        \"Datos\": f\"P({x})\",\n",
+        "        \"Real\": p_real.get(x, 0),\n",
+        "        \"Estimación\": p_estimada.get(x, 0),\n",
+        "        \"Diferencia\": abs(p_real.get(x, 0) - p_estimada.get(x, 0))\n",
+        "    } for x in soporte]\n",
         "\n",
-        "    esp_real, var_real, desv_real = calcular_momentos(dict_fpm_correcta)\n",
-        "    esp_est, var_est, desv_est = calcular_momentos(dict_fpm_estimada)\n",
+        "    esp_r, var_r, desv_r = calcular_momentos(p_real)\n",
+        "    esp_e, var_e, desv_e = calcular_momentos(p_estimada)\n",
         "\n",
-        "    resumen_df = pd.DataFrame([\n",
-        "        {\"Datos\": \"Esperanza\", \"Real\": esp_real, \"Estimación\": esp_est, \"Diferencia\": abs(esp_real - esp_est)},\n",
-        "        {\"Datos\": \"Varianza\", \"Real\": var_real, \"Estimación\": var_est, \"Diferencia\": abs(var_real - var_est)},\n",
-        "        {\"Datos\": \"Desv. Est.\", \"Real\": desv_real, \"Estimación\": desv_est, \"Diferencia\": abs(desv_real - desv_est)},\n",
-        "    ])\n",
-        "    return pd.concat([data_df, resumen_df], ignore_index=True)\n",
+        "    resumen = [\n",
+        "        {\"Datos\": \"Esperanza\", \"Real\": esp_r, \"Estimación\": esp_e, \"Diferencia\": abs(esp_r - esp_e)},\n",
+        "        {\"Datos\": \"Varianza\", \"Real\": var_r, \"Estimación\": var_e, \"Diferencia\": abs(var_r - var_e)},\n",
+        "        {\"Datos\": \"Desv. Est.\", \"Real\": desv_r, \"Estimación\": desv_e, \"Diferencia\": abs(desv_r - desv_e)},\n",
+        "    ]\n",
+        "    return pd.concat([pd.DataFrame(data), pd.DataFrame(resumen)], ignore_index=True)\n",
         "\n",
-        "def calificar_generador(generador_de_muestras, dict_fpm_correcta, n=100_000):\n",
-        "  soporte = dict_fpm_correcta.keys()\n",
+        "def calificar_generador_de_muestras(generador, dict_p_real, n=100_000):\n",
+        "  soporte = list(dict_p_real.keys())\n",
         "\n",
-        "  muestras, tiempos = zip(*[medir_tiempo(generador_de_muestras) for _ in range(n)])\n",
+        "  muestras, tiempos = zip(*(medir_tiempo(generador) for _ in range(n)))\n",
+        "  frec = Counter(muestras)\n",
+        "  dict_p_estimada = {x: frec.get(x, 0) / n for x in soporte}\n",
         "\n",
-        "  frecuencia_muestras = Counter(muestras)\n",
-        "  dict_fpm_estimada = {x: frecuencia_muestras.get(x, 0) / n for x in soporte}\n",
+        "  df_comparacion = comparar_distribuciones_df(dict_p_estimada, dict_p_real)\n",
+        "  tvd = calcular_TVD(dict_p_estimada, dict_p_real)\n",
+        "  t_prom = np.mean(tiempos)\n",
         "\n",
-        "  compracion_df = comparar_distribuciones_df(dict_fpm_estimada, dict_fpm_correcta)\n",
-        "  tvd = calcular_TVD(dict_fpm_estimada, dict_fpm_correcta)\n",
-        "  tiempo_promedio = np.mean(tiempos)\n",
-        "\n",
-        "  print(compracion_df)\n",
+        "  print(df_comparacion.to_string(index=False))\n",
         "  print()\n",
         "  print(f\"Distancia total de variación: {tvd:.6f}\")\n",
-        "  print(f\"Tiempo promedio de ejecución: {tiempo_promedio} segundos\")\n"
+        "  print(f\"Tiempo promedio de ejecución: {t_prom} segundos\")\n"
       ],
       "metadata": {
         "id": "5BFAexMVS7GG"
       },
-      "execution_count": 48,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -159,55 +161,53 @@
         "print('Sin ordenar:')\n",
         "dict_fda = calcular_dict_fda(DICT_FPM)\n",
         "generador_de_muestras = lambda: TI(dict_fda)\n",
-        "calificar_generador(generador_de_muestras, DICT_FPM)\n",
+        "calificar_generador_de_muestras(generador_de_muestras, DICT_FPM)\n",
         "print()\n",
         "print('Ordenando:')\n",
         "dict_fda = calcular_dict_fda(ordenar_dict_fpm(DICT_FPM))\n",
         "generador_de_muestras = lambda: TI(dict_fda)\n",
-        "calificar_generador(generador_de_muestras, DICT_FPM)"
+        "calificar_generador_de_muestras(generador_de_muestras, DICT_FPM)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oEuV013GObXr",
-        "outputId": "58d7f048-f546-4f57-fc73-47e182dd3995"
+        "outputId": "07e31bf2-809d-42aa-f7fc-2fd72835eb15"
       },
-      "execution_count": 50,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Sin ordenar:\n",
+            "     Datos     Real  Estimación  Diferencia\n",
+            "      P(1) 0.150000    0.151530    0.001530\n",
+            "      P(2) 0.200000    0.200490    0.000490\n",
+            "      P(3) 0.100000    0.098900    0.001100\n",
+            "      P(4) 0.350000    0.350210    0.000210\n",
+            "      P(5) 0.200000    0.198870    0.001130\n",
+            " Esperanza 3.250000    3.244400    0.005600\n",
+            "  Varianza 1.887500    1.892569    0.005069\n",
+            "Desv. Est. 1.373863    1.375707    0.001843\n",
             "\n",
-            "        Datos      Real  Estimación  Diferencia\n",
-            "0        P(1)  0.150000    0.151500    0.001500\n",
-            "1        P(2)  0.200000    0.200210    0.000210\n",
-            "2        P(3)  0.100000    0.098400    0.001600\n",
-            "3        P(4)  0.350000    0.350750    0.000750\n",
-            "4        P(5)  0.200000    0.199140    0.000860\n",
-            "5   Esperanza  3.250000    3.245820    0.004180\n",
-            "6    Varianza  1.887500    1.893093    0.005593\n",
-            "7  Desv. Est.  1.373863    1.375897    0.002034\n",
-            "\n",
-            "Distancia total de variación: 0.002460\n",
-            "Tiempo promedio de ejecución: 1.3618944399013344e-06 segundos\n",
+            "Distancia total de variación: 0.002230\n",
+            "Tiempo promedio de ejecución: 1.1496690197236604e-06 segundos\n",
             "\n",
             "Ordenando:\n",
+            "     Datos     Real  Estimación  Diferencia\n",
+            "      P(1) 0.150000    0.151850    0.001850\n",
+            "      P(2) 0.200000    0.199770    0.000230\n",
+            "      P(3) 0.100000    0.098980    0.001020\n",
+            "      P(4) 0.350000    0.350650    0.000650\n",
+            "      P(5) 0.200000    0.198750    0.001250\n",
+            " Esperanza 3.250000    3.244680    0.005320\n",
+            "  Varianza 1.887500    1.892952    0.005452\n",
+            "Desv. Est. 1.373863    1.375846    0.001983\n",
             "\n",
-            "        Datos      Real  Estimación  Diferencia\n",
-            "0        P(1)  0.150000    0.149630    0.000370\n",
-            "1        P(2)  0.200000    0.200770    0.000770\n",
-            "2        P(3)  0.100000    0.100600    0.000600\n",
-            "3        P(4)  0.350000    0.349570    0.000430\n",
-            "4        P(5)  0.200000    0.199430    0.000570\n",
-            "5   Esperanza  3.250000    3.248400    0.001600\n",
-            "6    Varianza  1.887500    1.884877    0.002623\n",
-            "7  Desv. Est.  1.373863    1.372908    0.000955\n",
-            "\n",
-            "Distancia total de variación: 0.001370\n",
-            "Tiempo promedio de ejecución: 1.2642912295086716e-06 segundos\n"
+            "Distancia total de variación: 0.002500\n",
+            "Tiempo promedio de ejecución: 2.448607080887086e-06 segundos\n"
           ]
         }
       ]
@@ -333,34 +333,33 @@
         "  return SOPORTE[indice_random]\n",
         "\n",
         "generador_de_muestras = lambda: AyR(DICT_FPM, q)\n",
-        "calificar_generador(generador_de_muestras, DICT_FPM)"
+        "calificar_generador_de_muestras(generador_de_muestras, DICT_FPM)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t23hnNsz-kh5",
-        "outputId": "f7371b00-29a2-430f-9e59-5f95be72c0a5"
+        "outputId": "03086aaf-8ac5-4f02-ce08-553367645227"
       },
-      "execution_count": 87,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "     Datos     Real  Estimación  Diferencia\n",
+            "      P(1) 0.150000    0.197990    0.047990\n",
+            "      P(2) 0.200000    0.199850    0.000150\n",
+            "      P(3) 0.100000    0.199790    0.099790\n",
+            "      P(4) 0.350000    0.199240    0.150760\n",
+            "      P(5) 0.200000    0.203130    0.003130\n",
+            " Esperanza 3.250000    3.009670    0.240330\n",
+            "  Varianza 1.887500    2.003476    0.115976\n",
+            "Desv. Est. 1.373863    1.415442    0.041579\n",
             "\n",
-            "        Datos      Real  Estimación  Diferencia\n",
-            "0        P(1)  0.150000    0.198740    0.048740\n",
-            "1        P(2)  0.200000    0.200580    0.000580\n",
-            "2        P(3)  0.100000    0.200400    0.100400\n",
-            "3        P(4)  0.350000    0.199530    0.150470\n",
-            "4        P(5)  0.200000    0.200750    0.000750\n",
-            "5   Esperanza  3.250000    3.002970    0.247030\n",
-            "6    Varianza  1.887500    1.998061    0.110561\n",
-            "7  Desv. Est.  1.373863    1.413528    0.039665\n",
-            "\n",
-            "Distancia total de variación: 0.150470\n",
-            "Tiempo promedio de ejecución: 5.659271889362572e-07 segundos\n"
+            "Distancia total de variación: 0.150910\n",
+            "Tiempo promedio de ejecución: 1.0611686494303285e-06 segundos\n"
           ]
         }
       ]
